Primeira parte ok

--- a/ProjetoAssistencial.Admin/Views/Entidade/Index.cshtml
+++ b/ProjetoAssistencial.Admin/Views/Entidade/Index.cshtml
@@ -16,6 +16,7 @@
                     <td>@entidade.Id</td>
                     <td>@entidade.Nome</td>
                     <td>@entidade.Liberado</td>
+                    <td>@Html.ActionLink("Autorizar", "Autorizar")</td>
                 </tr>
             }
         </table>
