--- a/ProjetoAssistencial.Admin/Views/Categorias/Index.cshtml
+++ b/ProjetoAssistencial.Admin/Views/Categorias/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="header">
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Cadastrar", "Cadastrar", "Categorias")</li>
+        <li>@Html.ActionLink("Cadastro", "Cadastro")</li>
     </ul>
     <h1 class="text-muted">Categoria</h1>
 </div>
@@ -21,6 +21,7 @@
             <tr>
                 <td>@categoria.Id</td>
                 <td>@categoria.Descricao</td>
+                <td><a href="/Categorias/Modificar/@categoria.Id">Alterar</a>|<a href="#">Excluir</a></td>
             </tr>
         }
     </table>
