--- a/ProjetoAssistencial.Cliente/Views/Entidade/Index.cshtml
+++ b/ProjetoAssistencial.Cliente/Views/Entidade/Index.cshtml
@@ -9,7 +9,7 @@
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Ação", "Acao")</li>
     </ul>
-    <h1 class="text-muted">Categoria</h1>
+    <h1 class="text-muted">Doações</h1>
 </div>
 
 <div>
