--- a/ProjetoAssistencial.Cliente/Views/Login/PrimeiroAcessoEntidade.cshtml
+++ b/ProjetoAssistencial.Cliente/Views/Login/PrimeiroAcessoEntidade.cshtml
@@ -3,6 +3,19 @@
     ViewBag.Title = "Primeiro Acesso Entidade";
 }
 
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <title>_Layout</title>
+</head>
+
 <h2>Primeiro Acesso Entidade</h2>
 
 <form action="/Login/GravarPrimeiroAcessoEntidade" method="post">
@@ -13,3 +26,6 @@
     <input type="submit" value="Gravar" class="form-control" />
 
 </form>
+
+</body>
+</html>
