--- a/ProjetoAssistencial.Cliente/Views/Voluntario/Index.cshtml
+++ b/ProjetoAssistencial.Cliente/Views/Voluntario/Index.cshtml
@@ -26,7 +26,7 @@
             <tr>
                 <td>@acao.IdEntidade</td>
                 <td>@acao.IdCategoria</td>
-                <td>@acao.Acao</td>
+                <td>@acao.Descricao</td>
                 <td>@acao.DataHora</td>
                 <td>@Html.ActionLink("Aceitar", "Aceitar")</td>
             </tr>
@@ -39,15 +39,17 @@
 <div>
     <table>
         <tr>
-            <th>Entidade</th>
+            <th>Voluntario</th>
             <th>Doação</th>
+            <th>Entidade</th>
             <th></th>
         </tr>
         @foreach (var doacao in ViewBag.Doacoes)
             {
             <tr>
                 <td>@doacao.IdVoluntario</td>
-                <td>@doacao.Doacao</td>
+                <td>@doacao.Descricao</td>
+                <td>@doacao.IdEntidade</td>
             </tr>
         }
     </table>
