--- a/ProjetoAssistencial.Cliente/Views/Entidade/Index.cshtml
+++ b/ProjetoAssistencial.Cliente/Views/Entidade/Index.cshtml
@@ -22,7 +22,7 @@
             {
             <tr>
                 <td>@doacao.IdVoluntario</td>
-                <td>@doacao.Doacao</td>
+                <td>@doacao.Descricao</td>
                 <td>@Html.ActionLink("Aceitar", "Aceitar")</td>
             </tr>
         }
@@ -45,7 +45,7 @@
             <tr>
                 <td>@acao.IdEntidade</td>
                 <td>@acao.IdCategoria</td>
-                <td>@acao.Acao</td>
+                <td>@acao.Descricao</td>
                 <td>@acao.DataHora</td> 
                 <td>@Html.ActionLink("Aceitar", "Aceitar")</td>
             </tr>
