--- a/ProjetoAssistencial.Cliente/Views/Entidade/Acao.cshtml
+++ b/ProjetoAssistencial.Cliente/Views/Entidade/Acao.cshtml
@@ -9,11 +9,19 @@
 
     <label for="nome">Descrição</label>
 
-    <input type="text" id="categoria" name="acao.idcategoria" class="form-control" />
-
-    <input type="text" id="datahora" name="acao.datahora" class="form-control" />
+    <input type="text" id="categoria" name="acao.id" class="form-control" />
 
     <input type="text" id="descricao" name="acao.descricao" class="form-control" />
+
+    <label for="categoria">Categoria</label>
+
+    <select id="categoria" name="IdCategoria" class="form-control">
+        @foreach (var categoria in ViewBag.Categorias)
+        {
+            <option value=@categoria.Id>@categoria.Descricao</option>
+        }
+
+    </select>
 
     <input type="submit" value="Gravar" class="form-control" />
 
