--- a/ProjetoAssistencial.Admin/Views/Login/Index.cshtml
+++ b/ProjetoAssistencial.Admin/Views/Login/Index.cshtml
@@ -18,8 +18,8 @@
                 <div class="loginmodal-container">
                     <h1>Logar no Sistema</h1><br>
                     <form action="/Login/Autenticar" method="post">
-                        <input type="text" name="user" placeholder="Username">
-                        <input type="password" name="pass" placeholder="Password">
+                        <input type="text" name="usuario" placeholder="Usuário">
+                        <input type="password" name="senha" placeholder="Senha">
                         <input type="submit" name="login" class="login loginmodal-submit" value="Login">
                     </form>
                 </div>
