--- a/ProjetoAssistencial.Cliente/Views/Login/PrimeiroAcessoVoluntario.cshtml
+++ b/ProjetoAssistencial.Cliente/Views/Login/PrimeiroAcessoVoluntario.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Primeiro Acesso Entidade";
+    ViewBag.Title = "Primeiro Acesso Voluntário";
 }
 
 @{
@@ -21,7 +21,14 @@
 <form action="/Login/GravarPrimeiroAcessoVoluntario" method="post">
 
     <label for="nome">Nome</label>
+
     <input type="text" id="nome" name="voluntario.nome" class="form-control" />
+
+    <input type="text" id="cidade" name="voluntario.cidade" class="form-control" />
+
+    <input type="text" id="usuario" name="voluntario.usuario" class="form-control" />
+
+    <input type="text" id="senha" name="voluntario.senha" class="form-control" />
 
     <input type="submit" value="Gravar" class="form-control" />
 
