--- a/ProjetoAssistencial.Cliente/Views/Voluntario/Doar.cshtml
+++ b/ProjetoAssistencial.Cliente/Views/Voluntario/Doar.cshtml
@@ -11,8 +11,6 @@
 
     <input type="text" id="descricao" name="doacao.descricao" class="form-control" />
 
-
-
-    <input type="submit" value="Gravar" class="form-control" />
+    <input type="submit" value="Doar" class="form-control" />
 
 </form>
