--- a/ProjetoAssistencial.Admin/Views/Categorias/Index.cshtml
+++ b/ProjetoAssistencial.Admin/Views/Categorias/Index.cshtml
@@ -21,7 +21,7 @@
             <tr>
                 <td>@categoria.Id</td>
                 <td>@categoria.Descricao</td>
-                <td><a href="/Categorias/Modificar/@categoria.Id">Alterar</a>|<a href="#">Excluir</a></td>
+                <td><a href="/Categorias/Modificar/@categoria.Id">Alterar</a>|<a href="/Categorias/Excluir/@categoria.Id">Excluir</a></td>
             </tr>
         }
     </table>
